Fixed Desktop remindTOS alignment

--- a/res/style.css
+++ b/res/style.css
@@ -148,7 +148,7 @@ ul.navbar img {
     width:         auto;
     border-bottom: 1px ridge #AAAAAA;
     padding:       5px;
-    margin:        0px 5px 5px 40px;
+    margin:        0px 20px 0px 10px;
 }
 #remindTos > p {
     display: inline-block;
